--- a/Flask/templates/classify.html
+++ b/Flask/templates/classify.html
@@ -4,32 +4,31 @@
         <meta charset="utf-8">
         <title>Classifying Photos!</title>
 
-        <link rel="stylesheet" href="{{ url_for('static',     filename='css/classify.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/classify.css') }}">
+        <!-- Add icon library -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         {% extends "template.html" %}
         {% block content %}
 
-        <h1> Classified Folders are ready to download! </h1>
+        <h1> Organized Folders are ready to download! </h1>
 
         <p> Thank you for using our webpage </p>
 
-        <img src="https://i5.walmartimages.com/asr/05d34f29-f446-4796-a766-79a77ec721f0.ef51c1415226f695c865b6d8d60b0167.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF" alt="thankyou" width="333" height="333">
+        <img src="https://www.hallmarkbusiness.com/dw/image/v2/AALB_PRD/on/demandware.static/-/Sites-hbc-master/default/dw72c9cf81/product-surfaces/1HBC0324_COV.jpg?sw=1280&sh=1280&sm=fit" alt="thankyou" width="555" height="288">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Add icon library -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <form action="" method="get" >
-            <a href = "{{url_for('download')}}">Download</a>
-        </form>
-
+        <a href="/classify/download">Download</a>
 
         <br>
+        <div style="height:14px; width:100%; clear:both;"></div>
         <a href="/annotations" class="previous">&laquo; Previous</a>
         <a href="/" class="next">Home &raquo;</a>
-        <form action="">
-            <a href = "{{url_for('classify_reset')}}">Reset</a>
+        <div style="height:14px; width:100%; clear:both;"></div>
+        <form action="" style="text-align:center;background-color:tomato;width:100%;">
+            <a href = "{{url_for('classify_reset')}}" style="color:white;width:100%;">Reset (Start Over)</a>
         </form>
         {% endblock %}
     </body>
