--- a/Flask/templates/template.html
+++ b/Flask/templates/template.html
@@ -5,17 +5,17 @@
    <title>Flask Parent Template</title>
 
    <link rel="stylesheet" href="{{ url_for('static',     filename='css/template.css') }}">
-   
+
  </head>
  <body>
     <header>
-      <div class="container">
+      <div class="header">
         <h1 class="logo">Welcome to whoisinmyphoto.com</h1>
       </div>
     </header>
-    
+
     {% block content %}
     {% endblock %}
-    
+
  </body>
 </html>
