--- a/Flask/static/css/upload.css
+++ b/Flask/static/css/upload.css
@@ -1,24 +1,124 @@
+*{font-family: verdana;}
+
 a {
+    font-family: verdana;
     text-decoration: none;
     display: inline-block;
-    padding: 8px 16px;
-  }
-  
-  a:hover {
+    padding: 8px 8px;
+}
+
+a:hover {
     background-color: #ddd;
     color: black;
-  }
-  
-  .previous {
+}
+
+input[type=submit].green_button:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+h1 {
+    font-family: verdana;
+    text-align: center;
+}
+
+.previous {
     background-color: #f1f1f1;
     color: black;
-  }
-  
-  .next {
+}
+
+.next {
     background-color: #04AA6D;
     color: white;
-  }
-  
-  .round {
+}
+
+.round {
     border-radius: 50%;
-  }
+}
+
+input[type=submit] {
+    display: block;
+    position: relative;
+    width: 200px;
+    height: 50px;
+    border-radius: 25px;
+    background: linear-gradient(40deg,#ff6ec4,#7873f5);
+    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    transition: transform .2s ease-out;
+    text-align: center;
+    margin: auto;
+    border: none;
+    font-size: 18px;
+}
+
+input[type=submit]:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+input[type=file] {
+    background-color: #3CBC8D;
+    color: white;
+    border: none;
+    border-radius: 4px;
+}
+
+form {
+    font-size: 18px;
+    font-family: verdana;
+}
+
+p {
+    font-family: verdana;
+}
+
+.file {
+    opacity: 0;
+    width: 0.1px;
+    height: 0.1px;
+    position: absolute;
+}
+
+.file-input label {
+    display: block;
+    position: relative;
+    width: 200px;
+    height: 50px;
+    border-radius: 25px;
+    background: linear-gradient(40deg,#ff6ec4,#7873f5);
+    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+    transition: transform .2s ease-out;
+    text-align: center;
+    margin: auto
+}
+
+.file-input label:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.file-name {
+  width:0;
+  height:0;
+  z-index:-1;
+  position:absolute;
+  overflow:hidden;
+  opacity:0;
+}
+
+div.inst1 {
+    width: 500px;
+    margin: auto;
+}
