--- a/Flask/templates/classify.html
+++ b/Flask/templates/classify.html
@@ -19,8 +19,11 @@
         <img src="https://www.hallmarkbusiness.com/dw/image/v2/AALB_PRD/on/demandware.static/-/Sites-hbc-master/default/dw72c9cf81/product-surfaces/1HBC0324_COV.jpg?sw=1280&sh=1280&sm=fit" alt="thankyou" width="555" height="288">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <div style="height:14px; width:100%; clear:both;"></div>
 
-        <a href="/classify/download">Download</a>
+        <p align="center">
+            <a class="download" href="/classify/download">Download</a>
+        </p>
 
         <br>
         <div style="height:14px; width:100%; clear:both;"></div>
