--- a/Flask/static/css/classify.css
+++ b/Flask/static/css/classify.css
@@ -43,3 +43,18 @@ border-radius: 50%;
 .btn:hover {
   background-color: RoyalBlue;
 }
+
+
+
+.download:link, .download:visited {
+  background-color: #f44336;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.download:hover, .download:active {
+  background-color: red;
+}
