--- a/Flask/static/css/template.css
+++ b/Flask/static/css/template.css
@@ -35,7 +35,7 @@ border-radius: 50%;
   font-family: verdana;
   padding: 30px;
   text-align: center;
-  background: #F28683;
+  background: #5BCCF6;
 }
 
 .header h1 {
@@ -45,7 +45,7 @@ border-radius: 50%;
 }
 
 html {
-    background-color:#FBEEC1;
+    background-color:#FCDE67;
 }
 
 body {
